<resources>
    <string name="app_name">Shivpal Singh Yadav</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_biography">Biography</string>
    <string name="title_activity_political_career">Political Career</string>
    <string name="title_activity_samajwadi_party">Samajwadi Party</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="Birth">Birth:</string>
    <string name="LANGUAGE_OPTION_STRING">हिंदी</string>
    <string name="Birth_Info">He was born on Basant panchami’s holy occasion in 1955 to lucky father Sudhar Singh and Mother Moorti Devi as their younger son. Shivpal ji has got sublime feeling about humanity by birth. He learnt all the things like mass-struggle and leadership, from his elder brother Mulayam Singh ji.His father Late. Sri Sudhar Singh was a soft hearted but labourious farmer and his mother Late Smt. Moorti Devi was a greatly skilled house wife.</string>
    <string name="Education">Education:</string>
    <string name="Education_Info">Sri Shivpal Singh Ji has passed his primary and pre metric education with first class, then to complete High School and Inter Mediate education he took admission in Jain Inter college Karhal, Mainpuri from where he passed high School in 1972 and Inter Mediate in 1974.
After that Shivpal Ji has completed his Graduation in 1976 from K.K.Degree College Etawah(Kanpur University) and in 1977 he has completed his B.P.Ed degree fro Lucknow University.</string>
    <string name="Family">Family:</string>
    <string name="Family_Info">Sri Shivpal ji get married with Smt. Sarla Yadav on 23 May 1981. Shivpaal ji has one daughter Dr.Anubha Yadav and one Son Aditya Yadav.</string>
    <string name="Political_Career">Political Career</string>
    <string name="Political_Career_Info">He has been actively involved in social and political activities since has baby hood. He went door to door of his area and carried the patients to hospital for treatment, he always tried for the justice for poor people and took part in the socialist parties programs, these were in favorite activity.  During election of neta ji he used to distribute pamphlets and take the responsibility of the important task of booth-coordinator\n\n

On the arrival of big leader like Madhu Lmey,Babu Kapil Dev, Caudhary Charan Singh, Janeshwar Mishra shivpaal ji hold all the major responsibility on his own shoulders.

 In 1988 to 1991 and again in 1993 he was  elected chairman of District Cooperative Bank Etawah.\n\n

From 1995 to 1996 he became Jila Panchayat Adhyax.\n\n

In between from 1994 to 1998 he took the responsibility of Uttar pardesh co-operative bank’s chairman\n\n

In 13th legislative assembly of U.P he fought from Jaswant Nagar constituency and won by record votes,in the same year he became state general secretary of samajwadi party.He did incredible labor to make organization strong .he walked on foot through  all around U.p because he want to know the reality of the society .As a socialist his popularity and acceptability in the public has been increasing day by day .\n\n

As a general secretary he gave new dimension to his responsibilities.\n\n

On 1st  November 2007 in the meerut conference Shivpaal ji  nominated as acting president due to unhealthiness of the then president RamSaran Das\n\n

After the death of Ram saran ji on 6th January 2009 he became the president of Uttar Pradesh.\n\n

Shivpaal ji made Samajwadi   party   brighter in the guiding light and leadership   of Neta ji and janeshwar ji. The Samajwadi Party established as a major Party in U.P. Till May 2009 he was state president then he was nominated as an opposition leader in the U.P. legislative   assembly.  It was very tough to play an opposition leader role in the BSP majority Government. He accepted his challenging responsibility and always had a high repellently tone of common public and opposition\n\n

He did not delay for a moment to resign from opposition leader post on coming back of senior leader Azam Khan , this spirit shows that he loves principals and party’s welfare rather than post holding .Natural calamities like flood-drought, earth-quake , he always stood ahead to help. Many times he has given arrest and beard police torture, and protests his party workers. This is the reason that in sixteen assembly election he is the only M.L.A who won more than sixty percent (61.90) from the Samajwadi party symbol.\n\n

 Time to time he  wrote articles and small hand books on many occasion specially  on the occasion of  birthday of Dr.Lohia ,Ashfaqullah Khan, Chandra Shekhar Azad, MadhuLimey ,and distributed these articles  for  awareness to  the youths   about the royal history of India. Dozens of his articles has published in News Papers-Magazines  as Dainik Jagaran, Amar Ujala , Rastriya Sahara ,Janaagrah(Bengluru), Daily News Activist, Jan Sandesh, Canvij  times Etc.\n\n

He has published and distributed the historical charges of Dr. Lohia as: “Draupadi And Savitri”, “Do Katgharey” etc. and promoted reading-writing trend in Samajwadi party.He respects the literary people very much.Great poet Padm Shri Gopal Das “Neeraj” and Uday Pratap Singh loves him so   much, This shows his literary interest.\n\n

 

During the period he was the opposition-leader   he played a soldier’s role in the battle of mass struggle and collective revolt. He went to jail many- time   , wounded during movements but Shivpaal Ji never looked behind and prepare for the next movement   against corruption. Once again in 2012 on forming full majority  government by Samajwadi party he is given the responsibility of  P.W.D, Irrigation ,Cooperative Minister ,and he  is  working affectedly  to vanish the corruption in these departments ,He took strict action against many officers and engineers . A  News paper even called him “Action Minister”\n\n

His own history is same as Samajwadi prty’s history and philosophy of mass-struggle and active clemency.</string>
    <string name="About">About:</string>
    <string name="About_Info">Samajwadi Party came into existence on October 4, 1992 in Lucknow under the leadership of Shri Mulayam Singh Yadav.</string>
    <string name="Decription">Description:</string>
    <string name="Description_Info">The Samajwadi Party believes in creating a socialist society, which works on the principle of equality and the party has a secular and democratic outlook. The Samajwadi Party believes in continuously working towards the upliftment of weaker sections of society and it stands against communal forces.\n\n

Freedom fighter, socialist and a great Parliamentarian, Ram Manohar Lohia is a guiding light for the Samajwadi Party. Ram Manohar Lohia’s integrity, selfless struggle for India’s independence and his ability to unite people of all sections of society has greatly influenced the leaders, youth and workers in the party. Lohia was jailed by the British several times during the freedom struggle and he fought rigorously all his life for social equality.\n\n

Mahatma Gandhi’s ideas greatly influenced Lohia who worked tirelessly during the freedom movement writing articles against the British, raising awareness against British imperialism in Europe, and after India became independent devoted himself to grassroots politics which included farmers cause, development work and fighting against social injustice. He also worked towards putting an end to capitalist-feudalistic tendencies.\n\n

Lohia’s ability to awaken the people with his fiery articles on Satyagraha and his innate knowledge of social problems made him the foremost socialist leader of India. Lohia’s ‘Do or Die’ spirit is an inspiration and a guiding force for the Samajwadi Party in its struggle for social upliftment of the poor, backward and socially weaker sections of society.</string>
    <string name="RESIDENCE_ADDRESS">7, Kalidas Marg,\nHazratganj,\nLucknow.\nPIN: 226001\nPhone: 0522-2239994\n\t\t\t\t\t0522-2235567</string>
    <string name="RESIDENCE_TITLE">Residence Address:</string>
    <string name="OFFICE_TITLE">Office Address:</string>
    <string name="OFFICE_ADDRESS">Room No -99/100,\nVidhan Bhawan,\nLucknow.\nPIN: 226001\nPhone: 0522-2238088\n\t\t\t\t\t0522-2213272</string>
    <string name="title_activity_media">In Media</string>
    <string name="title_activity_photo_gallary">Photo Gallary</string>
    <string name="title_activity_video_gallary">Video Gallary</string>
    <string name="title_activity_social_media">Social Media</string>
    <string name="title_activity_web_view">Social Media</string>
    <string name="title_activity_launcher_image">Shivpal Singh Yadav</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="VIDHAN_BHAVAN">Constituency</string>
    <string name="title_activity_department">Departments</string>
    <string name="NETWORK_ERROR">The requested operation failed, please check your internet connection or network signal strength.</string>
    <string name="title_activity_vidhan_sabha">Constituency</string>
    <string name="Vidhan_Sabha_Area">Jaswant Nagar (199)</string>
    <string name="PARTY_WEBSITE_TITLE">Website:</string>
    <string name="PARTY_WEBSITE_URL">http://www.samajwadiparty.in/</string>
    <string name="PERSONAL_WEBSITE_URL">http://shivpalsinghyadav.com/</string>
    <string name="FACEBOOK">Facebook</string>
    <string name="GOOGLE_PLUS">Google Plus</string>
    <string name="TWITTER">Twitter</string>
    <string name="Public_Works_Department">Public Works Department</string>
    <string name="Irrigation">Irrigation</string>
    <string name="Co_operative">Co-operative</string>
    <string name="Land_Development_Water_Resources">Land Development And Water Resources</string>
    <string name="Flood_Control">Flood Control</string>
    <string name="Irrigation_Mechanical">Irrigation (Mechanical)</string>
    <string name="Revenue">Revenue</string>
    <string name="Uttar_Pradesh_Cooperative_Federation_Limited">Uttar Pradesh Cooperative Federation Limited</string>
    <string name="Sodic_Ravine_Land_development">Sodic And Ravine Land development</string>
    <string name="Waste_Land_Development">Waste Land Development</string>
    <string name="Disaster_Rehabilitation">Disaster And Rehabilitation</string>
    <string name="Public_Service_Management">Public Service Management</string>
</resources>