<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiographyActivity" >

    
      <include
        android:id="@+id/headerContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/header_home" />
    
       <ImageView
                android:id="@+id/biohHeadImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/biography_banner"
                 android:layout_below="@id/headerContainer" />
    
      
      
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/biohHeadImageView"
         android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

   <TextView
       android:id="@+id/birthTitle"
       android:layout_width="match_parent"
       android:layout_height="30dp"
      
       android:text="@string/Birth"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textSize="20dp"
       android:paddingLeft="10dp"
       android:gravity="center_vertical"
       android:background="#bfd5ee"
       
        />

    <TextView
        android:id="@+id/birthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Birth_Info"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
         />

    <TextView
        android:id="@+id/educationTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Education"
        android:textAppearance="?android:attr/textAppearanceMedium"
       android:textSize="20dp"
       android:paddingLeft="10dp"
       android:gravity="center_vertical"
       android:background="#bfd5ee"
        />

    <TextView
        android:id="@+id/educaionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Education_Info"
         android:textSize="16sp"
        android:fontFamily="sans-serif-light" />
    
     <TextView
        android:id="@+id/familyTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/Family"
        android:textSize="20dp"
       android:paddingLeft="10dp"
       android:gravity="center_vertical"
       android:background="#bfd5ee"
       
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/familyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:fontFamily="sans-serif-light"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:text="@string/Family_Info" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
