<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SamajwadiPartyActivity" >

   <ScrollView
        android:id="@+id/partyScrView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

   <TextView
       android:id="@+id/aboutTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="25dp"
       android:text="@string/About"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textSize="18dp"
       android:textStyle="bold" />

    <TextView
        android:id="@+id/aboutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/About_Info"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Decription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Description_Info"
        android:textSize="15dp" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
