<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity" >

      <include
        android:id="@+id/headerContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/header_home" />
    
    
    <ScrollView
        android:id="@+id/contactScrView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
         android:layout_below="@id/headerContainer"
          android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

   <TextView
       android:id="@+id/officeTitle"
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:layout_marginTop="25dp"
       android:text="@string/OFFICE_TITLE"
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
       android:paddingLeft="10dp"
       android:gravity="center_vertical"
       android:background="#bfd5ee"
       
        />

    <TextView
        android:id="@+id/officeAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/OFFICE_ADDRESS"
        android:textSize="15dp" />
    
       <TextView
       android:id="@+id/residenceTitle"
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:layout_marginTop="25dp"
       android:text="@string/RESIDENCE_TITLE"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textSize="20dp"
       android:paddingLeft="10dp"
       android:gravity="center_vertical"
       android:background="#bfd5ee"

        />

    <TextView
        android:id="@+id/residenceAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/RESIDENCE_ADDRESS"
        android:textSize="15dp" />
    </LinearLayout>
    </ScrollView>
    
</RelativeLayout>
